chore(config): configure Faces Servlet and welcome page in web.xml Added configuration entries to enable JSF Faces Servlet and define default startup behavior:  - Set GestaoEmpresas.xhtml as welcome page.  - Registered FacesServlet with *.xhtml URL pattern.  - Added JSF context parameters for Development stage and facelet refresh. Ensures JSF pages are properly served and reloaded during development.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,21 @@
 	version="3.1">
 
 	<display-name>jsfprimefaces-essencial</display-name>
-
+	
+	<welcome-file-list>
+		<welcome-file>GestaoEmpresas.xhtml</welcome-file>
+	</welcome-file-list>
+		
+	<context-param>
+		<param-name>javax.faces.PROJECT_STAGE</param-name>
+		<param-value>Development</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
+		<param-value>0</param-value>
+	</context-param>
+	
 	<resource-env-ref>
 		<resource-env-ref-name>BeanManager</resource-env-ref-name>
 		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
@@ -14,4 +28,15 @@
 	<listener>
 		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
 	</listener>
+	
+	<servlet>
+		<servlet-name>Faces Servlet</servlet-name>
+		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>*.xhtml</url-pattern>
+	</servlet-mapping>
 </web-app>
